# clmm

./: .gitignore  README.md
contract/: Cargo.toml
contract/src/: entrypoint.rs  error.rs  formulas.rs  instruction.rs  lib.rs  processor.rs  state.rs  tick_state.rs  utils.rs
contract/src/bitmap/: bitmaphelper.rs  bitmapstate.rs  mod.rs
contract/src/delta/: delta_helper.rs  mod.rs
contract/src/tick/: mod.rs  tick_helper.rs
design/design_app/: package-lock.json  package.json
design/design_app/src/app/: globals.css  layout.tsx  page.tsx
design/design_app/src/components/: LiquiditySection.tsx  Navbar.tsx
frontend/: .prettierrc  README.md  next.config.ts  package-lock.json  package.json
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20251223181301_initial_tables/: migration.sql
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/documentation/: page.tsx
frontend/src/components/: Footer.tsx  LiquiditySection.tsx  Modal.tsx  Navbar.tsx  app-header.tsx  app-layout.tsx  app-providers.tsx  theme-select.tsx
frontend/src/components/home/: PoolList.tsx  SubHeader.tsx  SummaryCards.tsx
frontend/src/components/modals/: AddLiquidityModal.tsx  WithdrawLiquidityModal.tsx
frontend/src/lib/: db.ts  utils.ts
frontend/src/lib/math/: swap.ts
indexer/: Cargo.toml  Cross.toml  recipe.json
indexer/.sqlx/: query-00d9f2c794d8ea6fe2602a4051e411a47f51c46c1d92496541aabf25304f8de5.json  query-1153dad05c22b587c22a8745344783d87b47bffeaca6fecf46c96af63f4108b6.json  query-446104b98f1d166576d5b745f183ca669c212df97d54baac61c54daad89adf6e.json  query-452dfbb971a87fe9ec83747d721f73d88315620bfe24e3f78c34e72fe80229cc.json  query-59be851072b0a0fdbdc6ebcfcd4041f5ae64903c8f08648ab7eefa5ce8adb8f9.json  query-5d0265444a5cc6d7493bcf6a9194685dae7f06fc1f5df5139cd41920d9b38d12.json  query-6b2f9189448fd81c9812f99d53700eeb00eb2efc66a74d8670ae7f16607a542c.json  query-7e6f347eea96bc6397a12cbb450aee2ee813b50e02f1ee2b11b8bb70844a7d4a.json  query-86a459bf6254c04ef7fcbef9bfc4f30604cc74263093cae4fcda86e950fbd925.json  query-98515f1d6068fdd262a5e1895a0563725d7cfd3ed3241f684c7fc241cb69a369.json  query-a15f1291d736ef7856632bf0e1e07749ad4d800b38b2688b9b2d10a36ef00abb.json  query-af8f6ef39ed39ad4e67d22c4c1e50181770115295b15d6e1aa9acea2cfab0b4b.json  query-b20ec04850d1e0a83fff6110cdb54d4682c6f72bd2be55bf2dd1995f99941bf7.json  query-b602f64fc55e1801f84212dbcb5c059529918321d861619b51c430c1d79a6ba6.json  query-bf4989561e3d70137254ed118ccb49b5f905ba0e55aa5b8fb421bde66deb9a61.json  query-c15280ec2092efc3539521d120439a4d190565edae042b0851ccf3a48ef20369.json  query-c37de9a2a24bcf0c83ad3ebd9e84a84b7805e63e93d71a3b2e6f8acf76867a41.json  query-c70b4d7236009697a75db0813e8422584a7681c6df4715e51d0c60d70c759eeb.json  query-db49cfa7db5b091c489c7cbb96b7d570f68ca29ad18e1977e30484adbff2b903.json  query-ed51364e5142011fa1d8799bbfe6e06dd6648f6518245070a82123f16536916f.json  query-f32506b0a6f3a5d4e8e7eb176721d984831e42bd41a5a05eda31c0c9a68067ed.json  query-fc87dd236af7c1044dd6121f0cca1ca7c20c8af51c9458ed50fade0a473288e0.json
indexer/migrations/: 11_add_position_account_address_position_accounts.sql  12_add_market_id_position_accounts.sql  13_modify_transactions.sql  1_updated_at_trigger.sql  2_create_users.sql  3_create_transactions.sql  4_create_markets.sql  5_create_active_ticks.sql  6_create_position_accounts.sql  7_user_token_accounts.sql  8_create_token_pool.sql  9_add_market_address.sql
indexer/src/: config.rs  db_helper.rs  lib.rs  main.rs  rpc_helper.rs
indexer/src/http/: error.rs  extractor.rs  mod.rs  users.rs
indexer/src/http/routes/: auth.rs  users.rs
indexer/src/transaction_handler/: handle_accounts.rs  handle_instructions.rs  handle_transaction.rs  instruction.rs  mod.rs  state.rs
(+49 files in other folders)
