[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
axum-macros = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
gemini_client_rs = "0.6.0"
dotenvy = "0.15.7"
serde_json = "1.0.143"
cargo-watch = "8.5.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "time","tls-rustls"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
clap_builder = "4.5.47"
anyhow = "1.0.99"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
uuid = "1.18.1"
async-trait = "0.1.89"
headers = "0.4.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
thiserror = "2.0.16"
reqwest = { version = "0.12.23", default-features = false, features = [
    "blocking",
    "rustls-tls-webpki-roots",
] }
json = "0.12.4"
langchain-rust = { version = "4.6.0", features = ["postgres"] }
chrono = "0.4.42"
time = "0.3.44"
borsh = "1.6.0"
solana-client = "3.1.8"
solana-sdk = "4.0.1"
solana-pubsub-client = "3.1.9"
solana-signature = "3.3.0"
solana-address = "2.2.0"
bs58 = "0.5.1"
solana-transaction-status-client-types = "3.1.9"
solana-program = "4.0.0"
solana-message = "4.0.0"
solana-account = "3.4.0"
spl-token-interface = "2.0.0"
bytemuck = "1.25.0"
openssl = { version = "0.10", features = ["vendored"] }

[lib]
path = "src/lib.rs"
